Fixed links being squashed

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -15,6 +15,12 @@
     border: 2px solid #C3073F;
     border-radius: 50px;
     transition: 0.5s;
+    margin-bottom: 15px;
+}
+
+.linkContainer {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .navButton:hover {
